--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,28 @@ body {
     background: #1E90FF;
     color: #ffffff;
 }
+.znahidka-btn {
+    position: absolute;
+    top: 15px;
+    right: 55px;
+    background: transparent;
+    color: #FFFFFF;
+    border: 2px solid #1E90FF;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    z-index: 1000;
+    font-family: 'Montserrat', sans-serif;
+    -webkit-tap-highlight-color: transparent;
+    letter-spacing: 2px;
+}
+.znahidka-btn:hover {
+    background: #1E90FF;
+    color: #ffffff;
+}
 .instruction-img-link {
     margin-top: 20px;
 }
