--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 .znahidka-btn {
     position: absolute;
     top: 15px;
-    right: 75px;
+    left: 15px;
     background: transparent;
     color: #FFFFFF;
     border: 2px solid #1E90FF;
