--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
     border: 2px solid #1E90FF;
     border-radius: 8px;
     padding: 10px 20px;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 100;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -249,7 +249,7 @@ body {
     }
     .znahidka-btn {
         top: 10px;
-        right: 10px;
+        left: 10px;
         padding: 8px 15px;
         font-size: 10px;
     }
