--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ body {
     font-size: 16px;
     font-weight: 100;
     cursor: pointer;
+    text-decoration: none;
     transition: all 0.3s ease;
     z-index: 1000;
     font-family: 'Montserrat', sans-serif;
