--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ body {
     font-size: 20px;
     font-weight: 100;
     font-family: 'Montserrat', sans-serif;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: white;
     color: #FFFFFF;
     letter-spacing: 2px;
     margin-bottom: 5px;
@@ -119,7 +119,7 @@ body {
     font-size: 14px;
     font-weight: 100;
     font-family: 'Montserrat', sans-serif;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: white;
     color: #FFFFFF;
     letter-spacing: 2px;
     background: #000000;
