--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,12 @@ body {
     transform: scale(1.1);
 }
 @media (max-width: 500px) {
+    body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000000;
+        
     .main-container {
         padding: 4px;
         width: 100%;
