--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom, #000000, #4B0082);
+    background: linear-gradient(to bottom, #000000, #191970);
     min-height: 100vh;
     font-family: Helvetica, Arial, sans-serif;
     -webkit-tap-highlight-color: transparent;
@@ -23,7 +23,7 @@ body {
 }
 .container {
     width: 100%;
-    background: linear-gradient(to bottom, #000000, #4B0082);
+    background: linear-gradient(to bottom, #000000, #191970);
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
