--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ body.light-theme .theme-label {
     position: absolute;
     content: "";
     height: 18px; /* Зменшено з 26px */
-    width: 14px; /* Зменшено з 26px */
+    width: 4px; /* Зменшено з 26px */
     left: 3px; /* Зменшено з 4px */
     bottom: 3px; /* Зменшено з 4px */
     background-color: white;
@@ -369,7 +369,20 @@ input:checked + .slider:before {
     margin-top: 20px;
 }
 
-.submit-btn, .clear-btn {
+.submit-btn {
+    padding: 12px;
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    -webkit-tap-highlight-color: transparent;
+    color: #FF0000;
+    letter-spacing: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+}
+.clear-btn {
     padding: 12px;
     border-radius: 6px;
     font-size: 16px;
@@ -491,7 +504,7 @@ input:checked + .slider:before {
         text-decoration: none;
     }
     .theme-toggle-container {
-        top: 110px;
+        top: 400px;
         right: 10px;
         gap: 6px;
     }
