--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ body.light-theme .theme-label {
 .theme-toggle {
     position: relative;
     display: inline-block;
-    width: 34px; /* Зменшено з 60px */
+    width: 54px; /* Зменшено з 60px */
     height: 34px; /* Зменшено з 34px */
 }
 
@@ -526,13 +526,13 @@ input:checked + .slider:before {
     }
     .theme-toggle-container {
         top: 70px;
-        left: 10px;
+        right: 10px;
         gap: 6px;
     }
     .theme-label {
         font-size: 14px; /* Зменшено з 14px */
         font-family: 'Montserrat', sans-serif;
-        font-weight: 200;
+        font-weight: 500;
         color: #FF0000;
         
     }
