--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ body.light-theme .theme-label {
 /* Напис на повзунку */
 .slider:after {
     position: absolute;
-    content: "ДЕНЬ";
+    content: "DAY ON";
     font-size: 14px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
