--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ body.light-theme .theme-label {
     right: 38px; /* Праворуч, як instruction-btn */
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 2px; /* 8зч
     z-index: 1000;
 }
 
