--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ body.light-theme .theme-label {
     right: 38px; /* Праворуч, як instruction-btn */
     display: flex;
     align-items: center;
-    gap: 6px; /* 8зч
+    gap: 7px; /* 8зч
     z-index: 1000;
 }
 
@@ -264,7 +264,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-    transform: translateX(80px); /* Переміщення до протилежного кінця (24px - 18px - 3px) */
+    transform: translateX(8px); /* Переміщення до протилежного кінця 80 (24px - 18px - 3px) */
 }
 
 .theme-label {
