--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,7 @@ body.light-theme .theme-label {
 /* Напис на повзунку */
 .slider:after {
     position: absolute;
-    content: "DAY ON";
+    content: "світлий режим";
     font-size: 12px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -244,7 +244,7 @@ body.light-theme .theme-label {
 }
 
 input:checked + .slider:after {
-    content: "NIGHT ON";
+    content: "темний режим";
     color: #FFFFFF;
 }
 
