--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,7 @@ body.light-theme .theme-label {
     display: inline-block;
     
     height: 50px; /* Зменшено з 34px */
-    width: 64px;  /*  64px */
+    width: 84px;  /*  64px */
 }
 
 .theme-toggle input {
@@ -253,8 +253,8 @@ input:checked + .slider:after {
     content: "";
     height: 12px; /* Зменшено з 26px */
     width: 12px; /* Зменшено з 26px */
-    left: 2px; /* Початкове положення */
-    bottom: 3px;
+    left: 1px; /* Початкове положення */
+    bottom: 5px; /* 3 */
     background-color: white;
     transition: 0.4s;
     border-radius: 50%;
@@ -265,7 +265,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-    transform: translateX(35px); /* Переміщення до протилежного кінця 80 (24px - 18px - 3px) */
+    transform: translateX(40px); /* Переміщення до протилежного кінця 80 (24px - 18px - 3px) */
 }
 
 .theme-label {
