--- a/styles.css
+++ b/styles.css
@@ -196,17 +196,17 @@ body.light-theme .theme-label {
 .theme-toggle-container {
     position: absolute;
     top: 65px; /* Нижче логотипу (80px висота + 10px відступ) */
-    right: 36px; /* Праворуч, як instruction-btn 36 */
+    right: 56px; /* Праворуч, як instruction-btn 36 */
     display: flex;
     align-items: center;
-    gap: 8px; /* 8зч
+    gap: 8px; /* 8зч */
     z-index: 1000;
 }
 
 .theme-toggle {
     position: relative;
     display: inline-block;
-    height: 60px; /* Зменшено з 34px */
+    height: 70px; /* Зменшено з 34px */
     width: 84px;  /*  64px */
     
     
@@ -255,7 +255,7 @@ input:checked + .slider:after {
     height: 12px; /* Зменшено з 26px */
     width: 12px; /* Зменшено з 26px */
     left: 1px; /* Початкове положення */
-    bottom: 50%; /* 3 */
+    bottom: 4px; /* 3 */
     background-color: white;
     transition: 0.4s;
     border-radius: 50%;
@@ -266,7 +266,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-    transform: translateX(60px); /* Переміщення до протилежного кінця 80 (24px - 18px - 3px) */
+    transform: translateX(70px); /* Переміщення до протилежного кінця 80 (24px - 18px - 3px) */
 }
 
 .theme-label {
