--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ body.light-theme .theme-label {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #191970; /* ccc */
     transition: 0.4s;
     border-radius: 24px;
 }
