--- a/styles.css
+++ b/styles.css
@@ -267,7 +267,7 @@ body.light-theme .theme-label {
     font-size: 12px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    color: #000000;
+    color: #FFFFFF;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
