--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ body.light-theme .theme-label {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #191970; /* ccc */
+    background-color: #191970; /* задній фон перемикача */
     transition: 0.4s;
     border-radius: 24px;
 }
@@ -279,6 +279,7 @@ input:checked + .slider:after {
     color: #FFFFFF;
 }
 
+/* Овальний перемикач */
 .slider:before {
     position: absolute;
     content: "";
@@ -286,7 +287,7 @@ input:checked + .slider:after {
     width: 14px; /* Зменшено з 26px */
     left: 1px; /* Початкове положення */
     bottom: 4px; /* 3 */
-    background-color: white;
+    background-color: #1E90FF;
     transition: 0.4s;
     border-radius: 50%;
 }
@@ -296,7 +297,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-    transform: translateX(79px); /* Переміщення до протилежного кінця 80 (24px - 18px - 3px) */
+    transform: translateX(79px); /* Відстань прокрутки перемикача */
 }
 
 .theme-label {
